--- a/seebeck.html
+++ b/seebeck.html
@@ -12,7 +12,7 @@
 
 <p>Nous allons chercher une fonction qui à toute différence de température &Delta;T en Kelvin associe une tension U en Volt</p>
 
-<p>Matériel :<br/> x1 Chauffage<br/> x1 Module à effet Seebeck<br/> x1 Un bécher<br/> De l’eau du robinet<br/> x1 Un multimètre<br/> x1 Un dissipateur thermique (puissance max dissipée 65W) => Ventirad de PC<br/> x1 Une résistance de 10Ω
+<p>Matériel :<br/> x1 Chauffage<br/> x1 Module à effet Seebeck<br/> x1 bécher<br/> De l’eau du robinet<br/> x1 multimètre<br/> x1 dissipateur thermique (puissance max dissipée 65W) => Ventirad de PC<br/> x1 résistance de 10Ω
 </p>
 
 <p>Protocole Expérimental :<br/>On fait chauffer de l’eau dans un bécher jusqu’à une température plus élevée que celle du milieu ambiant. Ensuite on immerge partiellement une face du module Seebeck dans l’eau pour faire chauffer l’une de ses deux faces.
@@ -33,7 +33,7 @@
 
 
 
-<p>Protocole Expérimental : <br/> Nous refaisons le montage précédent en ajoutant un ampèremètre en série dans le système ainsi qu’une résistance de 10Ω. Nous allons calculer la résistance interne du module à effet Seebeck, ce qui nous permettra de trouver
+<p>Protocole Expérimental : <br/> Nous refaisons le montage précédent en ajoutant un ampèremètre en série dans le circuit ainsi qu’une résistance de 10Ω. Nous allons calculer la résistance interne du module à effet Seebeck, ce qui nous permettra de trouver
     une fonction qui à toute tension U associe une intensité I. Nous utiliserons la relation U = R x I. Résultats : On sait que R=10+X où X représente la résistance interne du module à effet Seebeck et 10 la résistance déjà présente dans le circuit. De
     plus, nous pouvons mesurer l’intensité avec l’ampèremètre et la tension avec le voltmètre. On en déduit les relations suivantes : I = U/R ⇔ I = U/(10+X) ⇔ X=U/I-10 Ensuite, nous relevons la tension aux bornes du module et l’intensité du courant dans
     le circuit, on trouve : I = 0,019A et U= 0,36V On en déduit la résistance interne du module à effet Seebeck qui est donc de 8.37Ω. La résistance totale du circuit est donc de 10+8.37 soit 18.37Ω. Comme I=U/R, et que R est constant, nous avons trouvé
