correction de faute

--- a/presentation.html
+++ b/presentation.html
@@ -4,7 +4,7 @@
 
 <p>Après une semaine laborieuse de recherche (comme vous pouvez le constater dans l'onglet carnet de bord), nous avons finalement décidé de travailler sur l'extraction de l'énergie du milieu ambiant. Nous avons donc formulé cette problématique :</p>
 
-<h4 id="pb">Comment peut-on rendre les objets connectés électriquement autonomme ?</h4>
+<h4 id="pb">Comment peut-on rendre les objets connectés électriquement autonommes ?</h4>
 
 <h3>L'énergie et les objets connectés</h3>
 
