--- a/presentation.html
+++ b/presentation.html
@@ -25,14 +25,14 @@
 
 <h4>Définition :</h4>
 
-<p style="width:80%;float:left;">"L’effet photovoltaïque est obtenu par absorption des photons dans un matériau semi-conducteur qui génère alors des paires électrons-trous (excitation d'un électron de la bande de valence vers la bande de conduction) créant une tension ou un courant électrique"<br/><sub>Source : <a href="http://www.wikipedia.org/">http://www.wikipedia.org/</a></sub></p>
+<p style="width:80%;float:left;">"L’effet photovoltaïque est obtenu par absorption des photons dans un matériau semi-conducteur qui génère alors des paires électrons-trous (excitation d'un électron de la bande de valence vers la bande de conduction) créant une tension ou un courant électrique"<br/><sub>Source : <a href="http://www.wikipedia.org/wiki/Effet_photovoltaïque">http://www.wikipedia.org/</a></sub></p>
 
 <img style="width:20%;float:left;" src="photovolt.png" />
 
 <h3>La piezoélectricité</h3>
 
 <h4>Définition :</h4>
-<p style="width:80%;float:left;">“La piézoélectricité est la propriété que possèdent certains corps de se polariser électriquement sous l’action d’une contrainte mécanique et réciproquement de se déformer lorsqu’on leur applique un champ électrique”<br/><sub>Source : <a href="http://www.wikipedia.org/">http://www.wikipedia.org/</a></sub>
+<p style="width:80%;float:left;">“La piézoélectricité est la propriété que possèdent certains corps de se polariser électriquement sous l’action d’une contrainte mécanique et réciproquement de se déformer lorsqu’on leur applique un champ électrique”<br/><sub>Source : <a href="http://www.wikipedia.org/wiki/Piézoélectricité">http://www.wikipedia.org/</a></sub>
     <br/><br/> Les applications de cette énergie sont immenses, et trouve tout naturellement sa place dans nos expériences. On peut effectivement imaginer une personne ayant pour pratique sportive la course utiliser l'énergie produite par la course pour
     alimenter un bracelet connecté qui se chargerait de collecter les données sur cette même course.</p>
 <img style="width:20%;float:left;" src="https://upload.wikimedia.org/wikipedia/commons/c/c4/SchemaPiezo.gif" />
@@ -40,6 +40,6 @@
 <h3>L'effet seebeck</h3>
 
 <h4>Définition :</h4>
-<p style="width:80%;float:left;">"L’effet Seebeck se manifeste par l'apparition d'une tension produite par la différence de température entre des jonctions de plusieurs corp s conducteurs. C’est un effet thermoélectrique découvert en 1821 par le physicien allemand Thomas Johann Seebeck"<br/><sub>Source : <a href="http://www2.ac-lyon.fr">http://www2.ac-lyon.fr</a></sub>
+<p style="width:80%;float:left;">"L’effet Seebeck se manifeste par l'apparition d'une tension produite par la différence de température entre des jonctions de plusieurs corp s conducteurs. C’est un effet thermoélectrique découvert en 1821 par le physicien allemand Thomas Johann Seebeck"<br/><sub>Source : <a href="http://www2.ac-lyon.fr/lyc69/descartes/IMG/pdf/07b_-_Effet_Seebeck_-_1OP.pdf">http://www2.ac-lyon.fr</a></sub>
 </p>
 <img style="width:20%;float:left;" src="seebeck.bmp" />
