Ajout de paragrphes pour les applications

--- a/piezo.html
+++ b/piezo.html
@@ -47,4 +47,6 @@
 
 <!--<video src="img/video1.mp4" style="width:360px; height:640px;" controls></video>-->
 
+<h4>Applications :</h4>
+
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
