--- a/solar.html
+++ b/solar.html
@@ -337,3 +337,5 @@
 <img src="graph/sol/pl.png" />
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
+
+<h4>Applications :</h4>
