--- a/presentation.html
+++ b/presentation.html
@@ -12,14 +12,13 @@
     leur nombre à 30 par foyer en 2030). Aussi, les chargeurs se multiplient et garder tout ces objets connectés chargés va devenir de plus en plus problématique. De plus, ces objets utilisent des batteries au lithium qui sont très peu recyclées. Il faut
     donc trouver des moyens de créer de l'énergie constamment, afin de ne plus avoir à les charger. L'objectif de ce TPE est de donner des éléments de réponse à ce probème.</p>
 
-<h4>Le problème du Lithium</h4>
-<img style="width:20%;float:left;" src="ionexploding.jpg" />
+<h3>Le problème du Lithium</h3>
 
 <p style="width:80%;float:left;">Comme dit ci-dessus, les objets connectés utilisent massivement les batteries au lithium. Or, cela a de nombreux inconvénients. En plus d'être rare, l'extraction de ce métal est très polluante du fait de l'utilisation d'eau qui va ensuite contaminer l'environnement.
-    Ce n'est pas le seul problème, en effet, les batteries au lithium sont très peu (voir pas du tout) recyclables, ce qui en font des déchets toxiques supplémentaires polluants la nature. Enfin, les batteries au lithium sont inflammables et peuvent
-    être sujettes à l'explosion. Pour toutes ces raisons, il faut chercher de nouvelles solutions, plus propres, pour alimenter les objets connectés, c'est ce que nous allons faire ici en abordant 3 possibles solutions au problème</p>
+    Ce n'est pas le seul problème, en effet, les batteries au lithium sont très peu (voir pas du tout) recyclables, ce qui en font des déchets toxiques supplémentaires polluants la nature. Enfin, les batteries au lithium sont inflammables et peuvent être
+    sujettes à l'explosion. Pour toutes ces raisons, il faut chercher de nouvelles solutions, plus propres, pour alimenter les objets connectés, c'est ce que nous allons faire ici en abordant 3 possibles solutions au problème</p>
 
-
+<img style="width:20%;float:left;" src="ionexploding.jpg" />
 
 <h3>L'effet photovoltaïque</h3>
 
