--- a/piezo.html
+++ b/piezo.html
@@ -21,11 +21,11 @@
 </p>
 
 <p id="pr">Résultats :<br/> Quand Bilal marche 10s avec la cellule piezoélectrique sous la pointe de sa chaussure : <br/>
-    <video src="data/piezo/videos/avant1.mp4" controls></video>
+    <video src="data/piezo/videos/avant1.mp4" controls muted></video>
     <img src="graph/piezo/voltmarche2_devant.JPG" /><br/> On peut observer que l'on atteint tout juste 1V à chaque pas.<br/> Sous le milieu du pied :<br/>
-    <video src="data/piezo/videos/milieu1.mp4" controls></video>
+    <video src="data/piezo/videos/milieu1.mp4" controls muted></video>
     <img src="graph/piezo/voltmarche1_milieu.JPG" /><br/> Cette fois-ci, on atteint 3V à chaque pas, le milieu du pied est donc bien plus aproprié afin de placer une cellule.<br/> Sous le talon :<br/>
-    <video src="data/piezo/videos/arriere1.mp4" controls></video>
+    <video src="data/piezo/videos/arriere1.mp4" controls muted></video>
     <img src="graph/piezo/voltmarche3_arriere.JPG" /><br/> Sous le talon, le voltage est légèrement plus faible, on atteint 2V à chaque pas.<br/> Ensuite, nous avons décidé de tester une cellule dans la chaussure :<br/>
     <img src="graph/piezo/voltmarche4_interne.JPG" id="lastpict" /><br/> Le résultat est très décevant, on atteint à peine 1V</p>
 
