--- a/piezo.html
+++ b/piezo.html
@@ -44,9 +44,10 @@
     pour alimenter l'éclairage public.</p>
 
 
-
-<!--<video src="img/video1.mp4" style="width:360px; height:640px;" controls></video>-->
-
 <h4>Applications :</h4>
+
+<h5>Plaque terrestre</h5>
+
+<p>Le principe est de placer une plaque possédant plein de cellules piezoélectriques en dessous afin de produire de l'énergie lorsque quelqu'un passe dessus. Pour maximiser son rendement, il faudrait la placer dans un passage très fréquentés. Lezss cellules piezoélectriques ont un rendement bien trop faible pour un usage personnel ou pour un simple objet connecté dans une maison. Cependant, il peut être utilisé par la ville pour alimenter quelques services à l'aide des plaques que nous vous avons présenté. Cela pourrait aussi servir à une entreprise (assez grande) ou même à un établissement, du moment qu'un passage est régulièrement bien fréquenté pour que la plaque produise un bon rendement.</p>
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
