--- a/solar.html
+++ b/solar.html
@@ -340,6 +340,6 @@
 
 <h4>Applications :</h4>
 
-<h5></h5>
+<h5>Le support solaire</h5>
 
-<p></p>
+<p>Le support solaire est un support sur lequel on peut placer et brancher un objet connecté afin qu'il se charge à l'aide d'un petit panneau solaire placé sur le support; Ce support serait placé en intérieur (ou en extérieur) et alimenterait l'objet avec la lumière de la pièce. il peut faire un usage personnel du moment qu'il se trouve dans une pièce avec une source de lumière suffisante (qu'elle soit naturelle ou artificielle).</p>
