correction de fautes et précisions

--- a/piezo.html
+++ b/piezo.html
@@ -9,7 +9,7 @@
 
 <h5>Application à la marche des êtres humains</h5>
 
-<p>Protocole :<br/> Nous allons "scotcher" une cellule piezoélectrique au dessous de la semelle de Bilal et mesurer le voltage produit par une marche de 10 secondes. Nous allons donc utiliser le logiciel Latis Pro afin de mesurer le voltage et de tracer
+<p>Protocole :<br/> Nous allons "scotcher" une cellule piezoélectrique en dessous de la semelle de Bilal et mesurer le voltage produit par une marche de 10 secondes. Nous allons donc utiliser le logiciel Latis Pro afin de mesurer le voltage et de tracer
     des graphiques. De plus nous allons déterminer quelle est la zone du pied la plus intéressante pour placer la cellule.
 </p>
 
@@ -33,8 +33,8 @@
 
 <p>Partie 2 : Trouver l'intensité générée (avec des maths)</p>
 
-<p>On a F la pression appliquée par Bilal à chaque pas (la moitié de son poid) sur la surface de la cellule, d33 le coefficient piezoélectrique qui dépend du matériau de la cellule (ici du quartz) et Q la charge électrique générée par la contrainte mécanique.<br/>    Or comme nous l'ont appris les documents scientifiques (allez check la bibliographie pour plus d'informations) :<br/> <i>Q = d33 x F</i><br/> On sait que <i>F = 196.2N/2.8x10<sup>-15</sup>m<sup>2</sup></i> et <i>d33 = 2.33x10<sup>-12</sup></i><br/>    Par conséquent, dans le cas de Bilal, la charge en Coulombs générée par Bilal à chaque pas est de 1.456x10<sup>-6</sup>C<br/> Or <i>1C = 1000mAs</i> donc Bilal génère 1.456x10<sup>-3</sup>mAs ce qui nous fait donc à peu près 5mAh.<br/> Cela signifie
-    que pendant une marche de 1h, Bilal peut générer 5mA, ce qui permettrait de recharger une batterie de 3500mAh à hauteur de 0.15%</p>
+<p>On a F la pression appliquée par Bilal à chaque pas (la moitié de son poid) sur la surface de la cellule, d33 le coefficient piezoélectrique qui dépend du matériau de la cellule (ici du quartz) et Q la charge électrique générée par la contrainte mécanique.<br/>    Or comme nous l'ont appris les documents scientifiques (allez voir la bibliographie pour plus d'informations) :<br/> <i>Q = d33 x F</i><br/> On sait que <i>F = 196.2N/2.8x10<sup>-15</sup>m<sup>2</sup></i> et <i>d33 = 2.33x10<sup>-12</sup></i><br/>    Par conséquent, dans le cas de Bilal, la charge en Coulombs générée par Bilal à chaque pas est de 1.456x10<sup>-6</sup>C<br/> Or <i>1C = 1000mAs</i> donc Bilal génère 1.456x10<sup>-3</sup>mAs ce qui nous fait donc à peu près 5mAh.<br/> Cela signifie
+    que pendant une marche de 1h, Bilal peut générer 5mA, ce qui permettrait de recharger une batterie de 3500mAh (pile 9V) à hauteur de 0.15%</p>
 
 
 <p>Conclusion sur la piezoélectricité :</p>
@@ -48,6 +48,6 @@
 
 <h5>Plaque terrestre</h5>
 
-<p>Le principe est de placer une plaque possédant plein de cellules piezoélectriques en dessous afin de produire de l'énergie lorsque quelqu'un passe dessus. Pour maximiser son rendement, il faudrait la placer dans un passage très fréquentés. Lezss cellules piezoélectriques ont un rendement bien trop faible pour un usage personnel ou pour un simple objet connecté dans une maison. Cependant, il peut être utilisé par la ville pour alimenter quelques services à l'aide des plaques que nous vous avons présenté. Cela pourrait aussi servir à une entreprise (assez grande) ou même à un établissement, du moment qu'un passage est régulièrement bien fréquenté pour que la plaque produise un bon rendement.</p>
+<p>Le principe est de placer une plaque possédant plein de cellules piezoélectriques en dessous afin de produire de l'énergie lorsque quelqu'un passe dessus. Pour maximiser son rendement, il faudrait la placer dans un passage très fréquenté. Les cellules piezoélectriques ont un rendement bien trop faible pour un usage personnel ou pour un simple objet connecté dans une maison. Cependant, il peut être utilisé par la ville pour alimenter quelques services à l'aide des plaques que nous vous avons présentées. Cela pourrait aussi servir à une entreprise (assez grande) ou même à un établissement, du moment qu'un passage est régulièrement bien fréquenté pour que la plaque produise un bon rendement.</p>
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
