--- a/solar.html
+++ b/solar.html
@@ -14,7 +14,7 @@
 
 <h5>Expérience 1</h5>
 
-<p>Tout d'abord, nous allons lister les tensions et les intensités mesurées avec différentes résistances, nous pourrons alors en faire des représentations graphiques.</p>
+<p>Tout d'abord, nous allons lister les tensions et les intensités mesurées avec différentes résistances mais avec le même nombre de lux, nous pourrons alors en faire des représentations graphiques.</p>
 
 <p>Matériel:<br/>x1 cellule solaire
     <br/>x1 réostat
