--- a/piezo.html
+++ b/piezo.html
@@ -1,8 +1,7 @@
 <h2>La Piézoélectricité</h2>
 <h3>Definition :</h3>
-<p>“La piézoélectricité est la propriété que possèdent certains corps de se polariser électriquement sous l’action d’une contrainte mécanique et réciproquement de se déformer lorsqu’on leur applique un champ électrique”.
-    <br/><br/>
-</p>
+<p>“La piézoélectricité est la propriété que possèdent certains corps de se polariser électriquement sous l’action d’une contrainte mécanique et réciproquement de se déformer lorsqu’on leur applique un champ électrique”.</p>
+
 <h3>Expérience 1</h3>
 
 <p>Nous cherchons à calculer l'énergie que nous pouvons produire à l'aide de cellules piezoélectriques.</p>
