--- a/solar.html
+++ b/solar.html
@@ -1,4 +1,4 @@
-<h3>L'énergie solaire</h3>
+<h2>L'énergie solaire</h2>
 
 <p>L'énergie solaire est maintenant très connue et de plus en plus utilisée. C'est une énergie renouvellable possédant un bon rendement (classique, mais efficace).<br/> Nous allons chercher à utiliser un petit panneau solaire afin d'alimenter un objet connecté,
     qu'il soit à l'intérieur ou à l'extérieur du batiment.<br/>
@@ -8,15 +8,17 @@
     Le Capteur solaire permet de créer de l'énergie à partir d'une stimulation photonique d'une cellule photovoltaïque.<br/>
 </p>
 
-<h4>Expériences</h4>
+<h3>Expériences</h3>
 
 <p>Nous allons chercher la résistance pour laquelle la puissance générée est maximale.</p>
 
-<h5>Expérience 1</h5>
+<h3>Expérience 1</h3>
 
 <p>Tout d'abord, nous allons lister les tensions et les intensités mesurées avec différentes résistances mais avec le même nombre de lux, nous pourrons alors en faire des représentations graphiques.</p>
 
-<p>Matériel:<br/>x1 cellule solaire
+<h4>Matériel :</h4>
+
+<p>x1 cellule solaire
     <br/>x1 réostat
     <br/>x1 ampèremètre
     <br/>x1 voltmètre
@@ -200,12 +202,16 @@
 
 <p>Cela nous montre que pour des performances optimales pour alimenter un objet connecté, nous devrons régler la résistance sur 85&Omega;. C'est ce que nous ferons dans la seconde expérience.</p>
 
-<h5>Expérience 2</h5>
+<hr/>
+
+<h3>Expérience 2</h3>
 
 <p>Nous allons maintenant chercher à caluler la puissance produite par la cellule en fonction du nombre de lux, nous allons évidemment placer une résistance de 85&Omega; dans le circuit pour obtenir des performances optimales. Nous allons mesurer dans un
     premier temps la luminosité, l'intensité et la tension, puis, dans un second temps, nous calculerons la puissance.</p>
 
-<p>Matériel:<br/>x1 cellule solaire
+<h4>Matériel :</h4>
+
+<p>x1 cellule solaire
     <br/>x1 réostat
     <br/>x1 ampèremètre
     <br/>x1 voltmètre
@@ -338,8 +344,9 @@
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
 
-<h4>Applications :</h4>
+<h3>Applications :</h3>
 
-<h5>Le support solaire</h5>
+<h4>Le support solaire</h4>
 
-<p>Le support solaire est un support sur lequel on peut placer et brancher un objet connecté afin qu'il se charge à l'aide d'un petit panneau solaire placé sur le support; Ce support serait placé en intérieur (ou en extérieur) et alimenterait l'objet avec la lumière de la pièce. il peut faire un usage personnel du moment qu'il se trouve dans une pièce avec une source de lumière suffisante (qu'elle soit naturelle ou artificielle).</p>
+<p>Le support solaire est un support sur lequel on peut placer et brancher un objet connecté afin qu'il se charge à l'aide d'un petit panneau solaire placé sur le support; Ce support serait placé en intérieur (ou en extérieur) et alimenterait l'objet avec
+    la lumière de la pièce. il peut faire un usage personnel du moment qu'il se trouve dans une pièce avec une source de lumière suffisante (qu'elle soit naturelle ou artificielle).</p>
