--- a/seebeck.html
+++ b/seebeck.html
@@ -1,4 +1,4 @@
-<h3>L'effet Seebek</h3>
+<h2>L'effet Seebek</h2>
 
 <p>
     Le module à effet Seebeck permet de produire de l'énergie à partir d'une différence de température entre les deux faces du module. La face exposée à la plus grande température absorbe la chaleur et l'autre la rejette, ce processus génère un peu d'énergie
@@ -6,42 +6,49 @@
     pas l'utiliser).<br/>
 </p>
 
-<h4>Expériences</h4>
+<h3>Expériences</h3>
 
-<h5>Expérience 1</h5>
+<h3>Expérience 1</h3>
 
 <p>Nous allons chercher une fonction qui à toute différence de température &Delta;T en Kelvin associe une tension U en Volt</p>
 
-<p>Matériel :<br/> x1 Chauffage<br/> x1 Module à effet Seebeck<br/> x1 bécher<br/> De l’eau du robinet<br/> x1 multimètre<br/> x1 dissipateur thermique (puissance max dissipée 65W) => Ventirad de PC<br/> x1 résistance de 10Ω
+<h4>Matériel :</h4>
+
+<p>x1 Chauffage<br/> x1 Module à effet Seebeck<br/> x1 bécher<br/> De l’eau du robinet<br/> x1 multimètre<br/> x1 dissipateur thermique (puissance max dissipée 65W) => Ventirad de PC<br/> x1 résistance de 10Ω
 </p>
 
-<p>Protocole Expérimental :<br/>On fait chauffer de l’eau dans un bécher jusqu’à une température plus élevée que celle du milieu ambiant. Ensuite on immerge partiellement une face du module Seebeck dans l’eau pour faire chauffer l’une de ses deux faces.
-    On utilise le dissipateur thermique pour refroidir l’autre face du Seebeck. De cette différence de température naît ainsi un courant électrique. Nous établissons alors un tableau qui, à toute différence de température &Delta;T, associe la tension
-    U spécifiée en circuit ouvert. Nous pouvons alors tracer un graphique de ces résultats. Il en résulte une droite passant par l’origine, dont nous pouvons calculer le coefficient directeur appelé coefficient Seebeck. Par la suite, nous pouvons brancher
-    le module en série avec une résistance de 10Ω, et grâce à la relation U=RxI , en déduire l’intensité parcourant le circuit.
+<h4>Protocol Expérimental :</h4>
+
+<p>On fait chauffer de l’eau dans un bécher jusqu’à une température plus élevée que celle du milieu ambiant. Ensuite on immerge partiellement une face du module Seebeck dans l’eau pour faire chauffer l’une de ses deux faces. On utilise le dissipateur thermique
+    pour refroidir l’autre face du Seebeck. De cette différence de température naît ainsi un courant électrique. Nous établissons alors un tableau qui, à toute différence de température &Delta;T, associe la tension U spécifiée en circuit ouvert. Nous
+    pouvons alors tracer un graphique de ces résultats. Il en résulte une droite passant par l’origine, dont nous pouvons calculer le coefficient directeur appelé coefficient Seebeck. Par la suite, nous pouvons brancher le module en série avec une résistance
+    de 10Ω, et grâce à la relation U=RxI , en déduire l’intensité parcourant le circuit.
 </p>
 
-<p>Montage :<br/>
+<h4>Montage :</h4>
+<p>
     <img height="400px" src="data/seebeck/seebeck.jpg" />
     <img height="400px" src="data/seebeck/mesureseebeck.jpg" /></p>
 
-<p>Résultats :<br/><img src="graph/seebeck/dtu.png" /></p>
+<h4>Résultats :</h4>
+<p><img src="graph/seebeck/dtu.png" /></p>
 
-<h5>Expérience 2</h5>
+<hr/>
+
+<h3>Expérience 2</h3>
 
 <p>Nous allons chercher à calculer la résistance interne du module à effet Seebeck, cela nous aidera à trouver une fonction qui à toute tension U en Volt associe une intensité I en Ampère.</p>
 
+<h4>Protocole Expérimental :</h4>
 
-
-<p>Protocole Expérimental : <br/> Nous refaisons le montage précédent en ajoutant un ampèremètre en série dans le circuit ainsi qu’une résistance de 10Ω. Nous allons calculer la résistance interne du module à effet Seebeck, ce qui nous permettra de trouver
-    une fonction qui à toute tension U associe une intensité I. Nous utiliserons la relation U = R x I. Résultats : On sait que R=10+X où X représente la résistance interne du module à effet Seebeck et 10 la résistance déjà présente dans le circuit. De
-    plus, nous pouvons mesurer l’intensité avec l’ampèremètre et la tension avec le voltmètre. On en déduit les relations suivantes : I = U/R ⇔ I = U/(10+X) ⇔ X=U/I-10 Ensuite, nous relevons la tension aux bornes du module et l’intensité du courant dans
-    le circuit, on trouve : I = 0,019A et U= 0,36V On en déduit la résistance interne du module à effet Seebeck qui est donc de 8.37Ω. La résistance totale du circuit est donc de 10+8.37 soit 18.37Ω. Comme I=U/R, et que R est constant, nous avons trouvé
-    la fonction qui à toute tension mesurée au bornes du module à effet Seebeck associe une intensité électrique. Il s'agit de la fonction f(U) = U/18.37<br/> On en déduit alors la fonction qui à tout I et U associe P : f(I,U) = IxU = (1/18.37)xUxU =
-    U
+<p>Nous refaisons le montage précédent en ajoutant un ampèremètre en série dans le circuit ainsi qu’une résistance de 10Ω. Nous allons calculer la résistance interne du module à effet Seebeck, ce qui nous permettra de trouver une fonction qui à toute tension
+    U associe une intensité I. Nous utiliserons la relation U = R x I. Résultats : On sait que R=10+X où X représente la résistance interne du module à effet Seebeck et 10 la résistance déjà présente dans le circuit. De plus, nous pouvons mesurer l’intensité
+    avec l’ampèremètre et la tension avec le voltmètre. On en déduit les relations suivantes : I = U/R ⇔ I = U/(10+X) ⇔ X=U/I-10 Ensuite, nous relevons la tension aux bornes du module et l’intensité du courant dans le circuit, on trouve : I = 0,019A et
+    U= 0,36V On en déduit la résistance interne du module à effet Seebeck qui est donc de 8.37Ω. La résistance totale du circuit est donc de 10+8.37 soit 18.37Ω. Comme I=U/R, et que R est constant, nous avons trouvé la fonction qui à toute tension mesurée
+    au bornes du module à effet Seebeck associe une intensité électrique. Il s'agit de la fonction f(U) = U/18.37<br/> On en déduit alors la fonction qui à tout I et U associe P : f(I,U) = IxU = (1/18.37)xUxU = U
     <sup>2</sup>/18.37</p>
 
-<img src="graph/seebeck/pu.png" />
+<p><img src="graph/seebeck/pu.png" /></p>
 
 
 
@@ -49,10 +56,8 @@
     De plus, on a U = 0.0305&Delta;T, donc on en déduit f(&Delta;T) = 18.37(0.0305&Delta;T)<sup>2</sup>.
 </p>
 
-<img src="graph/seebeck/pdt.png" />
+<p><img src="graph/seebeck/pdt.png" /></p>
 
-<h4>Applications :</h4>
-
-<h5></h5>
+<h3>Applications :</h3>
 
 <p></p>
