exemples sur la présentation

--- a/presentation.html
+++ b/presentation.html
@@ -25,14 +25,17 @@
 <h4>Définition :</h4>
 
 <p style="width:78%;float:left;">"L’effet photovoltaïque est obtenu par absorption des photons dans un matériau semi-conducteur qui génère alors des paires électrons-trous (excitation d'un électron de la bande de valence vers la bande de conduction) créant une tension ou un courant électrique"<br/><sub>Source : <a href="http://www.wikipedia.org/wiki/Effet_photovoltaïque">http://www.wikipedia.org/</a></sub></p>
+<h4>Exemple :</h4>
+<p style="width:78%;float:left;">C'est une solution classique et connue de tous mais qui reste très efficace. On pourrait imaginer un tout petit panneau solaire permettant de récupérer suffisament d'énergie pour alimenter un objet connecté de temps en temps. Une autre solution serait de prendre un plus gros panneau solaire afin de l'alimenter continuellement. L'avantage de notre cas est que nous ne demandons pas énormément d'énergie, l'objet pourrait alors être en intérieur du moment qu'il reçoit assez de lumière.</p>
 
 <img style="width:20%;float:left;" src="photovolt.png" />
 <hr/>
 <h3>La piezoélectricité</h3>
 
 <h4>Définition :</h4>
-<p style="width:78%;float:left;">“La piézoélectricité est la propriété que possèdent certains corps de se polariser électriquement sous l’action d’une contrainte mécanique et réciproquement de se déformer lorsqu’on leur applique un champ électrique”<br/><sub>Source : <a href="http://www.wikipedia.org/wiki/Piézoélectricité">http://www.wikipedia.org/</a></sub>
-    <br/><br/> Les applications de cette énergie sont immenses, et trouve tout naturellement sa place dans nos expériences. On peut effectivement imaginer une personne ayant pour pratique sportive la course utiliser l'énergie produite par la course pour
+<p style="width:78%;float:left;">“La piézoélectricité est la propriété que possèdent certains corps de se polariser électriquement sous l’action d’une contrainte mécanique et réciproquement de se déformer lorsqu’on leur applique un champ électrique”<br/><sub>Source : <a href="http://www.wikipedia.org/wiki/Piézoélectricité">http://www.wikipedia.org/</a></sub></p>
+<h4>Exemple :</h4>
+<p style="width:78%;float:left;">Les applications de cette énergie sont immenses, et trouve tout naturellement sa place dans nos expériences. On peut effectivement imaginer une personne ayant pour pratique sportive la course utiliser l'énergie produite par la course pour
     alimenter un bracelet connecté qui se chargerait de collecter les données sur cette même course.</p>
 <img style="width:20%;float:right;" src="https://upload.wikimedia.org/wikipedia/commons/c/c4/SchemaPiezo.gif" />
 <hr/>
