--- a/presentation.html
+++ b/presentation.html
@@ -14,24 +14,24 @@
 <hr/>
 <h3>Le problème du Lithium</h3>
 
-<p style="width:78%;float:left;">Comme dit ci-dessus, les objets connectés utilisent massivement les batteries au lithium. Or, cela a de nombreux inconvénients. En plus d'être rare, l'extraction de ce métal est très polluante du fait de l'utilisation d'eau qui va ensuite contaminer l'environnement.
+<p style="width:72%;float:left;">Comme dit ci-dessus, les objets connectés utilisent massivement les batteries au lithium. Or, cela a de nombreux inconvénients. En plus d'être rare, l'extraction de ce métal est très polluante du fait de l'utilisation d'eau qui va ensuite contaminer l'environnement.
     Ce n'est pas le seul problème, en effet, les batteries au lithium sont très peu (voir pas du tout) recyclables, ce qui en font des déchets toxiques supplémentaires polluants la nature. Enfin, les batteries au lithium sont inflammables et peuvent être
     sujettes à l'explosion. Pour toutes ces raisons, il faut chercher de nouvelles solutions, plus propres, pour alimenter les objets connectés, c'est ce que nous allons faire ici en abordant 3 possibles solutions au problème</p>
 
-<img style="width:20%;float:left;" src="ionexploding.jpg" />
+<img style="width:20%;float:right;" src="ionexploding.jpg" />
 <hr/>
 <h3>L'effet photovoltaïque</h3>
 
 <h4>Définition :</h4>
 
-<p style="width:78%;float:left;">"L’effet photovoltaïque est obtenu par absorption des photons dans un matériau semi-conducteur qui génère alors des paires électrons-trous (excitation d'un électron de la bande de valence vers la bande de conduction) créant une tension ou un courant électrique"<br/><sub>Source : <a href="http://www.wikipedia.org/wiki/Effet_photovoltaïque">http://www.wikipedia.org/</a></sub></p>
+<p style="width:72%;float:left;">"L’effet photovoltaïque est obtenu par absorption des photons dans un matériau semi-conducteur qui génère alors des paires électrons-trous (excitation d'un électron de la bande de valence vers la bande de conduction) créant une tension ou un courant électrique"<br/><sub>Source : <a href="http://www.wikipedia.org/wiki/Effet_photovoltaïque">http://www.wikipedia.org/</a></sub></p>
 
-<img style="width:20%;float:left;" src="photovolt.png" />
+<img style="width:20%;float:right;" src="photovolt.png" />
 <hr/>
 <h3>La piezoélectricité</h3>
 
 <h4>Définition :</h4>
-<p style="width:78%;float:left;">“La piézoélectricité est la propriété que possèdent certains corps de se polariser électriquement sous l’action d’une contrainte mécanique et réciproquement de se déformer lorsqu’on leur applique un champ électrique”<br/><sub>Source : <a href="http://www.wikipedia.org/wiki/Piézoélectricité">http://www.wikipedia.org/</a></sub>
+<p style="width:72%;float:left;">“La piézoélectricité est la propriété que possèdent certains corps de se polariser électriquement sous l’action d’une contrainte mécanique et réciproquement de se déformer lorsqu’on leur applique un champ électrique”<br/><sub>Source : <a href="http://www.wikipedia.org/wiki/Piézoélectricité">http://www.wikipedia.org/</a></sub>
     <br/><br/> Les applications de cette énergie sont immenses, et trouve tout naturellement sa place dans nos expériences. On peut effectivement imaginer une personne ayant pour pratique sportive la course utiliser l'énergie produite par la course pour
     alimenter un bracelet connecté qui se chargerait de collecter les données sur cette même course.</p>
 <img style="width:20%;float:right;" src="https://upload.wikimedia.org/wikipedia/commons/c/c4/SchemaPiezo.gif" />
@@ -39,6 +39,6 @@
 <h3>L'effet seebeck</h3>
 
 <h4>Définition :</h4>
-<p style="width:78%;float:left;">"L’effet Seebeck se manifeste par l'apparition d'une tension produite par la différence de température entre des jonctions de plusieurs corps conducteurs. C’est un effet thermoélectrique découvert en 1821 par le physicien allemand Thomas Johann Seebeck"<br/><sub>Source : <a href="http://www2.ac-lyon.fr/lyc69/descartes/IMG/pdf/07b_-_Effet_Seebeck_-_1OP.pdf">http://www2.ac-lyon.fr</a></sub>
+<p style="width:72%;float:left;">"L’effet Seebeck se manifeste par l'apparition d'une tension produite par la différence de température entre des jonctions de plusieurs corps conducteurs. C’est un effet thermoélectrique découvert en 1821 par le physicien allemand Thomas Johann Seebeck"<br/><sub>Source : <a href="http://www2.ac-lyon.fr/lyc69/descartes/IMG/pdf/07b_-_Effet_Seebeck_-_1OP.pdf">http://www2.ac-lyon.fr</a></sub>
 </p>
-<img style="width:20%;float:left;" src="seebeck.bmp" />
+<img style="width:20%;float:right;" src="seebeck.bmp" />
