--- a/presentation.html
+++ b/presentation.html
@@ -53,6 +53,6 @@
 
 <h4>Définition :</h4>
 <p style="width:72%;float:left;">"L’effet Seebeck se manifeste par l'apparition d'une tension produite par la différence de température entre des jonctions de plusieurs corps conducteurs. C’est un effet thermoélectrique découvert en 1821 par le physicien allemand Thomas Johann Seebeck"<br/><sub>Source : <a href="http://www2.ac-lyon.fr/lyc69/descartes/IMG/pdf/07b_-_Effet_Seebeck_-_1OP.pdf">http://www2.ac-lyon.fr</a></sub></p>
-<img style="width:20%;float:left;" src="seebeck.bmp" />
+<img style="width:20%;float:right;" src="seebeck.bmp" />
 <h4>Exemple :</h4>
 <p style="width:72%;float:left;"></p>
