--- a/biblio.html
+++ b/biblio.html
@@ -1,9 +1,9 @@
 <h2>Bibliographie</h2>
 
 <p>Manufacturing Processes 1: Cutting Par Fritz Klocke
-    <br/>Handbook of Chemical and Biological Sensors publié par R.F Taylor,Jerome S. Schultz
-    <br/>Mechanical Vibrations: Applications to Equipment Par Yvon Mori
-    <br/>BIOMEDICAL INSTRUMENTATION AND MEASUREMENTS, 2nd Ed. Par ANANDA NATARAJAN, R.
-    <br/><a href="https://www.americanpiezo.com/knowledge-center/piezo-theory/behavior.html">https://www.americanpiezo.com/knowledge-center/piezo-theory/behavior.html</a>
-    <br/><a href="https://www.enocean.com/en/">https://www.enocean.com/en/</a>
+    <br/><br/>Handbook of Chemical and Biological Sensors publié par R.F Taylor,Jerome S. Schultz
+    <br/><br/>Mechanical Vibrations: Applications to Equipment Par Yvon Mori
+    <br/><br/>BIOMEDICAL INSTRUMENTATION AND MEASUREMENTS, 2nd Ed. Par ANANDA NATARAJAN, R.
+    <br/><br/><a href="https://www.americanpiezo.com/knowledge-center/piezo-theory/behavior.html">https://www.americanpiezo.com/knowledge-center/piezo-theory/behavior.html</a>
+    <br/><br/><a href="https://www.enocean.com/en/">https://www.enocean.com/en/</a>
 </p>
