mise à hour du carnet de bord

--- a/journal.html
+++ b/journal.html
@@ -147,3 +147,27 @@
         totale du circuit est donc de 10+8.37 soit 18.37Ω. Comme I=UR, et que R est constant, nous avons trouvé la fonction qui à toute tension mesurée au bornes du module peltier associe une intensité électrique.
     </p>
 </div>
+<hr/>
+<div>
+  ﻿<h3>Jour 13 : 18/12/2017</h3>
+  <h4>Objectif :</h4>
+  <p>Déterminer si l'énergie solaire est une d’energie viable pour un objet connecté.</p>
+  <h4>Matériel :</h4>
+  <p>
+    Un rhéostat<br/>
+    Une lampe de 40w<br/>
+    un variateur de puissance secteur<br/>
+    Un luxmètre<br/>
+    2 multimètre<br/>
+  </p>
+  <h4>Déroulement :</h4>
+  <p>Les panneaux solaires ont un point ou la résistance de leur charge leur permet d’atteindre leur maximum d’efficacité. Nous allons donc chercher la valeur de cette résistance dans un premier temps.</p>
+  <h4>Protocole :</h4>
+  <p>Nous utilisons un rhéostat pour ajuster la résistance, en mesurant l’intensité et la tension,Nous classons nos résultats dans un tableau. En  traçant la droite reliant la résistance de la charge du panneau solaire à la puissance, nous trouvons la résistance à mettre pour maximiser l’efficacité du panneau solaire.</p>
+  <h4>Résultat :</h4>
+  <p>Nous avons trouvé la meilleure configuration, quand la résistance est de 85Ω.</p>
+  <h4>Protocole :</h4>
+  <p>Faire varier la luminosité d’une lampe afin de trouver la fonction qui à toute intensité lumineuse associe une puissance.</p>
+  <h4>Résultats :</h4>
+  <p></p>
+</div>
